--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,19 +18,19 @@
       <tbody>
         <tr>
           <td>
-            <p>
+            
            <% if book.user.profile_image.attached? %>
                <%= image_tag book.user.profile_image.variant(resize_to_limit: [100, 100]) %>
            <% else %>
                <%= image_tag 'no_image.jpg', size: "100x100" %>
            <% end %>
-           </p>
-           <p>
+           <br>
             <%=link_to book.user.name,user_path(book.user.id) %>
-           </p>
+           
           </td>
           <td><%= link_to book.title, book_path(book.id) %></td>
           <td><%= book.body %></td>
+          <td><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></td>
         </tr>
       </tbody>
       <% end %>
