--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,7 +30,20 @@
           </td>
           <td><%= link_to book.title, book_path(book.id) %></td>
           <td><%= book.body %></td>
-          <td><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></td>
+          <% if book.favorited_by?(current_user) %>
+    <td>
+      <%= link_to book_favorite_path(book), method: :delete do %>
+       <i class="fa-solid fa-heart"></i> <%= book.favorites.count %> 
+      <% end %>
+    </td>
+    <% else %>
+    <td>
+      <%= link_to book_favorite_path(book), method: :post do %>
+       <i class="fa-regular fa-heart"></i> <%= book.favorites.count %>
+      <% end %>
+    </td>
+  <% end %>
+          <td><%= link_to "コメント#{book.book_comments.count} ", book_path(book.id) %></td>
         </tr>
       </tbody>
       <% end %>
