--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -60,25 +60,42 @@
           <%= link_to 'Destroy', book_path(@book.id), method: :delete %>
           <% end %>
          </td>
-
+<td>
+          <% if @book.favorited_by?(current_user) %>
+    
+      <%= link_to book_favorite_path(@book), method: :delete do %>
+       <i class="fa-solid fa-heart"></i> <%= @book.favorites.count %> 
+      <% end %>
+    
+    <% else %>
+    
+      <%= link_to book_favorite_path(@book), method: :post do %>
+        <i class="fa-regular fa-heart"></i><%= @book.favorites.count %> 
+      <% end %>
+    
+  <% end %>
+        </td>
         </tr>
     </tbody>
 </table>
 <div>
-  <p>コメント件数：<%= @book.post_comments.count %></p>
-  <% @book.post_comments.each do |post_comment| %>
-  <% if post_comment.user.profile_image.attached? %>
-  <%= image_tag post_comment.user.get_profile_image(100,100) %>
+  <p>コメント件数：<%= @book.book_comments.count %></p>
+  <% @book.book_comments.each do |book_comment| %>
+  <% if book_comment.user.profile_image.attached? %>
+  <%= image_tag book_comment.user.get_profile_image(100,100) %>
 <% else %>
   <%= image_tag 'no_image.jpg', size: "100x100" %>
 <% end %>
-    <%= post_comment.user.name %><%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %></br></br>
+    <%= book_comment.user.name %><%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
+    <% if book_comment.user == current_user %>
+      <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+    <% end %></br></br>
   <% end %>
 </div>
 <div>
-  <%= form_with model: [@book, @post_comment] do |f| %>
+  <%= form_with model: [@book, @book_comment] do |f| %>
     <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-    <%= f.submit "submit" %>
+    <%= f.submit "送信" %>
   <% end %>
 </div>
     </div>
