--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -63,7 +63,21 @@
           <%= link_to 'Destroy', book_path(book.id), method: :delete %>
           <% end %>
           </td>
-          <td><%= link_to "#{book.post_comments.count} コメント", book_path(book.id) %></td>
+          <% if book.favorited_by?(current_user) %>
+     <td>
+      <%= link_to book_favorite_path(book), method: :delete do %>
+        
+         <i class="fa-solid fa-heart"></i> <%= book.favorites.count %> 
+      <% end %>
+    </td>
+    <% else %>
+     <td>
+      <%= link_to book_favorite_path(book), method: :post do %>
+        <i class="fa-regular fa-heart"></i><%= book.favorites.count %> 
+      <% end %>
+    </td>
+  <% end %>
+          <td><%= link_to "コメント#{book.book_comments.count} ", book_path(book.id) %></td>
         </tr>
       </tbody>
       <% end %>
